chore: update definitions to improve swagger
